force-app/main/default/objects/Crop_Acreage_Projection__c/Crop_Acreage_Projection__c.object-meta.xml
<CustomObject>
    <label>Crop Acreage Projection</label>
    <nameField>
        <displayFormat>CAP{0000000}</displayFormat>
        <label>Crop Acreage Projection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crop Acreage Projections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>