force-app/main/default/objects/Crop_Acreage_Projection__c/fields/Ag_District__c.field-meta.xml
<CustomField>
    <fullName>Ag_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ag District</label>
    <referenceTo>Ag_District__c</referenceTo>
    <relationshipLabel>Crop Acreage Projections</relationshipLabel>
    <relationshipName>Crop_Acreage_Projections</relationshipName>
    <type>Lookup</type>
</CustomField>