force-app/main/default/objects/Crop_Acreage_Projection__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <label>Crop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOYBEAN</fullName>
            </value>
            <value>
                <fullName>CORN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>