force-app/main/default/objects/Crop_Acreage_Projection__c/fields/MG__c.field-meta.xml
<CustomField>
    <fullName>MG__c</fullName>
    <label>MG</label>
    <length>20</length>
    <type>Text</type>
</CustomField>