force-app/main/default/objects/Crop_Acreage_Projection__c/fields/Saved_Seed_Proportion__c.field-meta.xml
<CustomField>
    <fullName>Saved_Seed_Proportion__c</fullName>
    <label>Saved Seed Proportion</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>