force-app/main/default/objects/Crop_Acreage_Projection__c/fields/Seed_Population__c.field-meta.xml
<CustomField>
    <fullName>Seed_Population__c</fullName>
    <label>Seed Population</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>