force-app/main/default/objects/Crop_Acreage_Projection__c/fields/Trait__c.field-meta.xml
<CustomField>
    <fullName>Trait__c</fullName>
    <label>Trait</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>CONVENTIONAL</fullName>
            </value>
            <value>
                <fullName>ENLIST</fullName>
            </value>
            <value>
                <fullName>XTENDFLEX</fullName>
            </value>
            <value>
                <fullName>XTEND</fullName>
            </value>
            <value>
                <fullName>GTLL</fullName>
            </value>
            <value>
                <fullName>LL</fullName>
            </value>
            <value>
                <fullName>RR1</fullName>
            </value>
            <value>
                <fullName>RR2</fullName>
            </value>
            <value>
                <fullName>HT4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>