force-app/main/default/objects/Crop_Acreage_Projection__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRAIT</fullName>
            </value>
            <value>
                <fullName>MATURITY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>