force-app/main/default/objects/Crop_Acreage_Projection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Season__c</columns>
    <columns>Ag_District__c</columns>
    <columns>Trait__c</columns>
    <columns>Type__c</columns>
    <columns>Value__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Seed_Population__c</columns>
    <columns>Saved_Seed_Proportion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>TRAIT</value>
    </filters>
    <filters>
        <field>Season__c</field>
        <operation>equals</operation>
        <value>27/2027</value>
    </filters>
    <label>All</label>
</ListView>